force-app/main/default/objects/Account/fields/Account_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>2000 - Customer, third country except Switzerland English-speaking

2001 - Customer, third country except Switzerland German-speaking

2002 - Customer, third country except Switzerland French-speaking

2010 - Customer, Switzerland German-speaking

2020 - Customer, Switzerland French-speaking

2030 - Customer, Switzerland English-speaking

3000 - Customer, EU except FR English-speaking

3001 - Customer, EU except FR German-speaking

Translated with www.DeepL.com/Translator (free version)</inlineHelpText>
    <label>Account Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Template__c.Name</field>
            <operation>notEqual</operation>
            <value>Migrated Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>