force-app/main/default/objects/Account/fields/Account_to_delete__c.field-meta.xml
<CustomField>
    <fullName>Account_to_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account needs be marked for deletion in comarch as well.</inlineHelpText>
    <label>Account to delete</label>
    <type>Checkbox</type>
</CustomField>