force-app/main/default/objects/Account/fields/ComarchAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ComarchAccountNumber__c</fullName>
    <externalId>true</externalId>
    <label>Comarch Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>