force-app/main/default/objects/Account/fields/DeliveryBlock__c.field-meta.xml
<CustomField>
    <fullName>DeliveryBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Block</label>
    <type>Checkbox</type>
</CustomField>