force-app/main/default/objects/Account/fields/Einkaufsvolumen__c.field-meta.xml
<CustomField>
    <fullName>Einkaufsvolumen__c</fullName>
    <label>Einkaufsvolumen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>