force-app/main/default/objects/Account/fields/EnaioSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>EnaioSyncStatus__c</fullName>
    <label>Enaio Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>