force-app/main/default/objects/Account/fields/FLG_Member__c.field-meta.xml
<CustomField>
    <fullName>FLG_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLG Member</label>
    <type>Checkbox</type>
</CustomField>