force-app/main/default/objects/Account/fields/InvoiceRecipient__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Recipient</label>
    <type>Checkbox</type>
</CustomField>