force-app/main/default/objects/Account/fields/Machinery__c.field-meta.xml
<CustomField>
    <fullName>Machinery__c</fullName>
    <label>Machinery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAZ</fullName>
            </value>
            <value>
                <fullName>Multifunctional punch</fullName>
            </value>
            <value>
                <fullName>Facade punch</fullName>
            </value>
            <value>
                <fullName>System tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>