force-app/main/default/objects/Account/fields/Name_und_Comarch_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_und_Comarch_ID__c</fullName>
    <description>Displays Comarch Id and Address of Partner in Lookup field</description>
    <formula>Name &amp; &quot;, &quot; &amp;  ComarchAccountNumber__c &amp; &quot;, &quot; &amp; BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name und Comarch ID</label>
    <type>Text</type>
</CustomField>