force-app/main/default/objects/Account/fields/Open_Positions__c.field-meta.xml
<CustomField>
    <fullName>Open_Positions__c</fullName>
    <label>Open Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>