force-app/main/default/objects/Account/fields/OperationRadius__c.field-meta.xml
<CustomField>
    <fullName>OperationRadius__c</fullName>
    <label>Operation Radius (in km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>