force-app/main/default/objects/Account/fields/PostalCode_City__c.field-meta.xml
<CustomField>
    <fullName>PostalCode_City__c</fullName>
    <formula>BillingPostalCode &amp; &quot; &quot; &amp;BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code, City</label>
    <type>Text</type>
</CustomField>