force-app/main/default/objects/Account/fields/PreferredMaterial__c.field-meta.xml
<CustomField>
    <fullName>PreferredMaterial__c</fullName>
    <label>Preferred Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aluminiumtür</fullName>
                <label>Aluminum door</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Aluminum facade</label>
            </value>
            <value>
                <fullName>AFE</fullName>
                <label>Aluminum punched window / window frames</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Aluminum roof</label>
            </value>
            <value>
                <fullName>Brandschutztüre</fullName>
                <label>Fire protection door</label>
            </value>
            <value>
                <fullName>Tür</fullName>
                <label>Lift-and-slide door</label>
            </value>
            <value>
                <fullName>F+ - FRAME+ elementierte Lösung</fullName>
                <label>Modular Solution FRAME+</label>
            </value>
            <value>
                <fullName>T+ - THERM+ elementierte Lösung</fullName>
                <label>Modular Solution THERM+</label>
            </value>
            <value>
                <fullName>EFE</fullName>
                <label>Operational window</label>
            </value>
            <value>
                <fullName>DF</fullName>
                <label>Roof window</label>
            </value>
            <value>
                <fullName>SLIFT</fullName>
                <isActive>false</isActive>
                <label>SLIFT</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Steel facade</label>
            </value>
            <value>
                <fullName>SD</fullName>
                <label>Steel roof</label>
            </value>
            <value>
                <fullName>HAF - Holz-Alu-Fenster</fullName>
                <label>Wood-Aluminum Windows</label>
            </value>
            <value>
                <fullName>HF</fullName>
                <label>Wooden facade</label>
            </value>
            <value>
                <fullName>HD</fullName>
                <label>Wooden roof</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>