force-app/main/default/objects/Account/fields/ReasonForBlocking__c.field-meta.xml
<CustomField>
    <fullName>ReasonForBlocking__c</fullName>
    <label>Reason for blocking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>Change of name</fullName>
            </value>
            <value>
                <fullName>Employees deactivated</fullName>
            </value>
            <value>
                <fullName>Company dissolved</fullName>
            </value>
            <value>
                <fullName>Company already recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>