force-app/main/default/objects/Account/fields/ReportOwner__c.field-meta.xml
<CustomField>
    <fullName>ReportOwner__c</fullName>
    <formula>IF( OwnerId = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>