force-app/main/default/objects/Account/fields/Representative_ID__c.field-meta.xml
<CustomField>
    <fullName>Representative_ID__c</fullName>
    <label>Representative ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>