force-app/main/default/objects/Account/fields/Representative_name__c.field-meta.xml
<CustomField>
    <fullName>Representative_name__c</fullName>
    <label>Representative name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>