force-app/main/default/objects/Account/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logikal</fullName>
            </value>
            <value>
                <fullName>Schücal</fullName>
                <label>Schüco</label>
            </value>
            <value>
                <fullName>Wictop</fullName>
                <label>Wicona</label>
            </value>
            <value>
                <fullName>Klaes</fullName>
            </value>
            <value>
                <fullName>MAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>