force-app/main/default/objects/Account/fields/Steel_rack_agreement__c.field-meta.xml
<CustomField>
    <fullName>Steel_rack_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steel rack agreement</label>
    <type>Checkbox</type>
</CustomField>