force-app/main/default/objects/Account/fields/TenderType__c.field-meta.xml
<CustomField>
    <fullName>TenderType__c</fullName>
    <label>Tender Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Competitive bidding</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>