force-app/main/default/objects/Account/fields/Terms_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_payment__c</fullName>
    <label>Terms of payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>