force-app/main/default/objects/Account/validationRules/BillingAddressRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingAddressRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCountry)||ISBLANK(BillingStreet)||ISBLANK(BillingCity)||ISBLANK(BillingPostalCode)</errorConditionFormula>
    <errorMessage>Please enter an Address!</errorMessage>
</ValidationRule>