force-app/main/default/objects/Account/validationRules/FaxCountryCode.validationRule-meta.xml
<ValidationRule>
    <fullName>FaxCountryCode</fullName>
    <active>false</active>
    <errorConditionFormula>if(!ISBLANK(Fax) &amp;&amp; !ISNULL(Fax),LEFT(Fax, 1) &lt;&gt; &quot;+&quot;,false)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter the country code. Example: +49</errorMessage>
</ValidationRule>