force-app/main/default/objects/Account/validationRules/LanguageField.validationRule-meta.xml
<ValidationRule>
    <fullName>LanguageField</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Language__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Language__c</errorDisplayField>
    <errorMessage>Please provide a language</errorMessage>
</ValidationRule>