force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ComarchAccountNumber__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Representative_ID__c</field>
        <operation>equals</operation>
        <value>98000097</value>
    </filters>
    <label>Meine Accounts</label>
</ListView>